--- a/flipClock/package.json
+++ b/flipClock/package.json
@@ -23,6 +23,7 @@
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/utils": "^2.0.0",
     "electron-updater": "^6.1.1",
+    "pinia": "^2.1.6",
     "vue-router": "4"
   },
   "devDependencies": {
@@ -34,13 +35,19 @@
     "@vitejs/plugin-vue": "^4.3.1",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^11.0.3",
+    "autoprefixer": "^10.4.15",
+    "dayjs": "^1.11.9",
     "electron": "^25.6.0",
     "electron-builder": "^24.6.3",
     "electron-vite": "^1.0.27",
     "eslint": "^8.47.0",
     "eslint-plugin-vue": "^9.17.0",
     "less": "^4.2.0",
+    "postcss": "^8.4.29",
     "prettier": "^3.0.2",
+    "sass": "^1.66.1",
+    "scss": "^0.2.4",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6",
     "vite": "^4.4.9",
     "vue": "^3.3.4",
