完善时钟样式配置功能、增加系统托盘、编译打包配置

--- a/flipClock/electron-builder.yml
+++ b/flipClock/electron-builder.yml
@@ -1,5 +1,5 @@
 appId: com.electron.app
-productName: flipclock
+productName: 桌面时钟
 directories:
   buildResources: build
 files:
@@ -40,4 +40,4 @@ appImage:
 npmRebuild: false
 publish:
   provider: generic
-  url: https://example.com/auto-updates
+  url: https://xiaoxie.com/auto-updates
