--- a/flipClock/package.json
+++ b/flipClock/package.json
@@ -26,6 +26,7 @@
     "electron-updater": "^6.1.1",
     "element-plus": "^2.3.12",
     "pinia": "^2.1.6",
+    "pinia-plugin-persistedstate": "^3.2.0",
     "vue-router": "4"
   },
   "devDependencies": {
